--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
       </div>
     </section>
 
-    <section class="relative py-16">
+    <section class="relative pb-16">
       <h2 class="text-5xl font-serif text-center text-gray-800 mb-12">
         Логистика: удобно и быстро
       </h2>
@@ -693,7 +693,7 @@
       </div>
     </section>
 
-    <h2 class="text-2xl text-center font-extrabold mb-6">
+    <h2 class="text-2xl text-center font-extrabold mt-12">
       Специальное предложение для оптовых покупателей: <br />
       <span class="text-xl font-abold">
         Сделайте закупку на сумму от $3000 и получите невероятный бонус — отдых
@@ -701,34 +701,34 @@
       </span>
     </h2>
     <section id="tour-details" class="py-12 px-2 md:px-12">
-      <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg p-6 md:p-8">
-        <h2 class="text-3xl font-bold my-6 text-center text-gray-800">
+      <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg p-6 md:p-8 bg-cover" style="background-image: url(./img/yt.jpg);">
+        <h2 class="text-3xl font-bold mb-6 text-center text-gray-900">
           Экскурсионный тур “Анталия-Памуккале-Каппадокия”
         </h2>
 
         <!-- Основные детали тура -->
         <div class="grid grid-cols-1 gap-6 mb-8">
-          <div class="bg-gray-50 p-4 rounded-lg">
-            <h3 class="text-2xl font-semibold mb-2 text-gray-700">
+          <div class="bg-gray-50/40 p-4 rounded-lg">
+            <h3 class="text-2xl font-semibold mb-2 text-gray-900">
               Продолжительность:
             </h3>
-            <p class="text-lg text-gray-600 font-semibold">8 дней / 7 ночей</p>
-            <h3 class="text-2xl font-semibold mb-2 text-gray-700">
+            <p class="text-lg text-gray-900 font-semibold">8 дней / 7 ночей</p>
+            <h3 class="text-2xl font-semibold mb-2 text-gray-900">
               Проживание:
             </h3>
-            <p class="text-lg text-gray-600 font-semibold">В отелях 4–5*</p>
-            <h3 class="text-2xl font-semibold mb-2 text-gray-700">Питание:</h3>
-            <p class="text-lg text-gray-60 font-semibold">Завтраки (шведский стол)</p>
-            <h3 class="text-2xl font-semibold mb-2 text-gray-700">
+            <p class="text-lg text-gray-900 font-semibold">В отелях 4–5*</p>
+            <h3 class="text-2xl font-semibold mb-2 text-gray-900">Питание:</h3>
+            <p class="text-lg text-gray-900 font-semibold">Завтраки (шведский стол)</p>
+            <h3 class="text-2xl font-semibold mb-2 text-gray-900">
               В тур включены:
             </h3>
-            <p class="text-lg text-gray-600 font-semibold">Экскурсия с гидом</p>
-            <p class="text-lg text-gray-600 font-semibold">Трансферы по всему туру</p>
+            <p class="text-lg text-gray-900 font-semibold">Экскурсия с гидом</p>
+            <p class="text-lg text-gray-900 font-semibold">Трансферы по всему туру</p>
           </div>
         </div>
 
         <!-- Дополнительно оплачивается -->
-        <div class="bg-red-50 p-6 rounded-lg border-l-4 border-red-500">
+        <div class="bg-red-50/50 p-6 rounded-lg border-l-4 border-red-500">
           <h3 class="text-2xl font-bold mb-4 text-red-600">
             Дополнительно оплачивается:
           </h3>
@@ -842,15 +842,22 @@
       </div>
     </footer>
     <div
-      class="border-t border-white/30 py-4 mt-8 bg-zinc-900 text-center text-zinc-500 text-sm absolute left-0 w-full px-4"
+      class="items-center border-t border-white/30 py-4 mt-8 bg-zinc-900 text-center text-zinc-500 text-sm absolute left-0 w-full px-4"
     >
-      © 2024 Julizturkey.pro Все права защищены. <br />
-      Cайт разработан командой <br />
+      <p>
+
+        © 2024 Julizturkey.pro Все права защищены. <br />
+        Cайт разработан командой
+      </p>
       <a
-        class="font-semibold text-xs text-zinc-300"
-        href="https://www.instagram.com/ascending_sales_online/"
-        >https://www.instagram.com/ascending_sales_online/</a
-      >.
+      href="https://www.instagram.com/ascending_sales_online/"
+      target="_blank"
+    >
+      <ion-icon
+        name="logo-instagram"
+        class="text-2xl hover:text-gray-300"
+      ></ion-icon>
+    </a>
     </div>
 
     <script>
