--- a/index.html
+++ b/index.html
@@ -297,6 +297,17 @@
         </div>
       </div>
     </section>
+    <section
+      id="buyer-info"
+      class="pt-12 text-gray-900 text-center"
+    >
+      <div class="max-w-3xl mx-auto px-6">
+        <p class="text-2xl md:text-4xl font-bold mb-6">
+          Байер — это профессионал, который экономит ваше время, деньги и нервы.
+        </p>
+      </div>
+    </section>
+
     <div class="container mx-auto px-6 md:px-12 text-center mt-16">
       <a
         href="https://wa.me/375297174741"
@@ -701,14 +712,17 @@
       </span>
     </h2>
     <section id="tour-details" class="py-12 px-2 md:px-12">
-      <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg p-6 md:p-8 bg-cover" style="background-image: url(./img/yt.jpg);">
+      <div
+        class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg p-6 md:p-8 bg-cover"
+        style="background-image: url(./img/yt.jpg)"
+      >
         <h2 class="text-3xl font-bold mb-6 text-center text-gray-900">
           Экскурсионный тур “Анталия-Памуккале-Каппадокия”
         </h2>
 
         <!-- Основные детали тура -->
         <div class="grid grid-cols-1 gap-6 mb-8">
-          <div class="bg-gray-50/40 p-4 rounded-lg">
+          <div class="bg-gray-50/60 p-4 rounded-lg">
             <h3 class="text-2xl font-semibold mb-2 text-gray-900">
               Продолжительность:
             </h3>
@@ -718,21 +732,27 @@
             </h3>
             <p class="text-lg text-gray-900 font-semibold">В отелях 4–5*</p>
             <h3 class="text-2xl font-semibold mb-2 text-gray-900">Питание:</h3>
-            <p class="text-lg text-gray-900 font-semibold">Завтраки (шведский стол)</p>
+            <p class="text-lg text-gray-900 font-semibold">
+              Завтраки (шведский стол)
+            </p>
             <h3 class="text-2xl font-semibold mb-2 text-gray-900">
               В тур включены:
             </h3>
             <p class="text-lg text-gray-900 font-semibold">Экскурсия с гидом</p>
-            <p class="text-lg text-gray-900 font-semibold">Трансферы по всему туру</p>
+            <p class="text-lg text-gray-900 font-semibold">
+              Трансферы по всему туру
+            </p>
           </div>
         </div>
 
         <!-- Дополнительно оплачивается -->
-        <div class="bg-red-50/50 p-6 rounded-lg border-l-4 border-red-500">
+        <div class="bg-red-50/80 p-6 rounded-lg border-l-4 border-red-500">
           <h3 class="text-2xl font-bold mb-4 text-red-600">
             Дополнительно оплачивается:
           </h3>
-          <ul class="list-disc list-inside text-lg text-gray-700 space-y-2">
+          <ul
+            class="list-disc list-inside text-lg text-gray-700 space-y-2 font-semibold"
+          >
             <li>Авиаперелёты</li>
             <li>Обеды и ужины (по желанию)</li>
             <li>Активация ваучера (100$)</li>
@@ -845,19 +865,18 @@
       class="items-center border-t border-white/30 py-4 mt-8 bg-zinc-900 text-center text-zinc-500 text-sm absolute left-0 w-full px-4"
     >
       <p>
-
         © 2024 Julizturkey.pro Все права защищены. <br />
         Cайт разработан командой
       </p>
       <a
-      href="https://www.instagram.com/ascending_sales_online/"
-      target="_blank"
-    >
-      <ion-icon
-        name="logo-instagram"
-        class="text-2xl hover:text-gray-300"
-      ></ion-icon>
-    </a>
+        href="https://www.instagram.com/ascending_sales_online/"
+        target="_blank"
+      >
+        <ion-icon
+          name="logo-instagram"
+          class="text-2xl hover:text-gray-300"
+        ></ion-icon>
+      </a>
     </div>
 
     <script>
