--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
       </div>
     </header>
-    <section id="work-process" class="bg-gray-50 py-16">
+    <section id="work-process" class="py-16">
       <h2 class="text-4xl font-serif text-center text-gray-800 mb-12">
         Процесс работы
       </h2>
