--- a/index.html
+++ b/index.html
@@ -297,10 +297,7 @@
         </div>
       </div>
     </section>
-    <section
-      id="buyer-info"
-      class="pt-12 text-gray-900 text-center"
-    >
+    <section id="buyer-info" class="pt-12 text-gray-900 text-center">
       <div class="max-w-3xl mx-auto px-6">
         <p class="text-2xl md:text-4xl font-bold mb-6">
           Байер — это профессионал, который экономит ваше время, деньги и нервы.
@@ -707,8 +704,8 @@
     <h2 class="text-2xl text-center font-extrabold mt-12">
       Специальное предложение для оптовых покупателей: <br />
       <span class="text-xl font-abold">
-        Сделайте закупку на сумму от $3000 и получите невероятный бонус — отдых
-        в Турции на двоих в ПОДАРОК!
+        Сделайте закупку на сумму от $3000 и получите бонус — ваучер на отдых в
+        Турции на двоих в ПОДАРОК!
       </span>
     </h2>
     <section id="tour-details" class="py-12 px-2 md:px-12">
