--- a/index.html
+++ b/index.html
@@ -815,12 +815,14 @@
       <div class="container mx-auto px-6 md:px-12">
         <div class="flex flex-col items-start">
           <p class="text-lg font-serif leading-relaxed mb-4">
-            📩 Напишите мне прямо сейчас! Я помогу превратить ваши бизнес-идеи в
+            📩 Свяжитесь со мной прямо сейчас! Я помогу превратить ваши бизнес-идеи в
             реальность
             <br />
-            📞
             <a href="tel:+905313557039" class="underline hover:text-gray-300"
-              >+905313557039</a
+              >  <ion-icon
+              name="logo-whatsapp"
+              class="text-2xl -mb-1 hover:text-gray-300"
+            ></ion-icon> +905313557039</a
             ><br />
             📧
             <a
