--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
       <div class="container mx-auto px-6 md:px-12">
         <div class="flex flex-col items-start">
           <p class="text-lg font-serif leading-relaxed mb-4">
-            📩 Свяжитесь со мной прямо сейчас! Я помогу превратить ваши бизнес-идеи в
+            📩 Свяжитесь со мной прямо сейчас - я помогу превратить ваши бизнес-идеи в
             реальность
             <br />
             <a href="tel:+905313557039" class="underline hover:text-gray-300"
