--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
         <div class="flex flex-col items-start">
           <p class="text-lg font-serif leading-relaxed mb-4">
             📩 Свяжитесь со мной прямо сейчас - я помогу превратить ваши бизнес-идеи в
-            реальность
+            реальность!
             <br />
             <a href="tel:+905313557039" class="underline hover:text-gray-300"
               >  <ion-icon
