--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
       <p class="text-2xl md:text-4xl font-bold mb-8">
         Байер — это профессионал, который экономит ваше время, деньги и нервы.
       </p>
-<img src="./img/buyer.jpg" alt="" class="">
+<img src="./img/IMG_8988.PNG" alt="" class="">
     </div>
   </section>
   
