--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <!-- Шаг 6 -->
         <div class="p-6 bg-white/70 shadow-lg md:rounded-lg">
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
-            6. Доставка до пункта назначения
+            6. Организую доставку до пункта назначения
           </h3>
           <p class="text-gray-700 font-semibold text-lg">
             Доставка товара до вашего пункта назначения.
@@ -689,13 +689,13 @@
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
             Закупка одежды от $2000 до $5000
           </h3>
-          <p class="text-xl text-gray-700">5% от суммы заказа</p>
+          <p class="text-xl text-gray-700">-200$ от суммы заказа</p>
         </div>
         <div class="p-6 border-b-2 mx-3 md:rounded-xl">
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
             Закупка одежды от $5000
           </h3>
-          <p class="text-xl text-gray-700">Фиксированная стоимость: $400</p>
+          <p class="text-xl text-gray-700">-5% от суммы заказа</p>
         </div>
         <div class="p-6 border-b-2 mx-3 md:rounded-xl">
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
