--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
-      name="facebook-domain-verification"
+      name="facebook-domain-verification" 
       content="se51ftujwkttf6q5l138b227z2hn59"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -473,10 +473,20 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
       </ol>
       <div class="carousel-inner flex gap-6 p-8">
         <div
-          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg md:rounded-lg carousel-item active"
+        class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg md:rounded-lg carousel-item active"
+      >
+        <img
+          src="./img/отзывы Юлия.png"
+          alt="Отзыв 1"
+          class="w-full h-auto md:rounded-lg"
+        />
+      </div>
+        <div
+          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg md:rounded-lg carousel-item"
         >
           <img
             src="./img/01.png"
