--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg md:rounded-lg carousel-item active"
       >
         <img
-          src="./img/отзывы Юлия.png"
+          src="./img/00.png"
           alt="Отзыв 1"
           class="w-full h-auto md:rounded-lg"
         />
