--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
       "
     >
       <div
-        class="bg-black/50 px-6 py-12 md:rounded-lg max-w-3xl mx-auto text-center"
+        class="bg-black/50 px-6 py-12 md:rounded-lg mx-auto text-center"
       >
         <h2 class="text-3xl md:text-4xl font-bold mb-4">
           Я очень люблю Турцию и особенно Стамбул
